# cothello

./: README.md  build_exts.py  pyproject.toml
.github/workflows/: build.yml
othello/: .gitignore  __init__.py  bitboard.cpp  bitboard.h  cothello.cpp  cothello.h  cothello.pyx  cython_bitboard.cpp  cython_bitboard.pyx  cython_othello.pyx  env.py  othello.py
src/: action.h  bitboard.cpp  bitboard.h  env.h  player.h  pybind11.cpp
tests/: test_bitboard.py  test_othello.py
