[build-system]
requires = ["setuptools", "numpy~=1.26.0", "poetry_core>=1.5.0", "pybind11>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "othello"
version = "2.1.0"
description = "C++ othello environment using bitboard."
authors = ["Tatsuya Yatagawa <tatsy.mail@gmail.com>"]
readme = "README.md"
license = "CC BY-NC-SA 4.0"

packages = [{ include = "./othello" }]
exclude = ["dist/*", ".github/*", "tests/*", ".pytest_cache/*", ".mypy_cache/*"]

[tool.poetry.build]
script = "build_exts.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "~=1.26.0"
matplotlib = "*"
pybind11 = ">=1.2.0"
cython = "*"
ipython = "*"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.4.3"

[tool.isort]
profile = "black"
length_sort = "True"
line_length = 99

[tool.mypy]
python_version = 3.9
follow_imports = "silent"
disallow_any_generics = "True"
strict_optional = "True"
check_untyped_defs = "True"
allow_redefinition = "True"

[tool.flake8]
max-line-length = 99
ignore = "Q000,E127,E203,E402,W503,W504"

[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 99

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
